--- a/static/style.css
+++ b/static/style.css
@@ -8,10 +8,39 @@ body {
 h1{
    display: flex;
    justify-content: center;
-     color: #4911e2;
+   color: #4911e2;
 }
 
-label{
+.labels{
+   margin-left: 600px;
+   color: #4911e2;
+}
+
+.values{
+   margin-left: 810px;
+   color: #4911e2;
+}
+
+.gradient-button {
+  text-decoration: none;
+  display: inline-block;
+  color: white;
+  padding: 20px 30px;
+  margin: 10px 20px;
+  border-radius: 10px;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  background-image: linear-gradient(to right, #9EEFE1 0%, #4830F0 51%, #9EEFE1 100%);
+  background-size: 200% auto;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .1);
+  transition: .5s;
+}
+.gradient-button:hover {
+  background-position: right center;
+}
+
+h2{
     font-size: 20px;
     margin-left: 450px;
 }
