--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,13 @@
 
     <form method="post">
         <h2 class="labels">Сумма:</h2>
-        <input type="range" name="sum" min="0.1" max="10" value="5" step="0.1" oninput="updateVal()" class="slider" id="sum" />
+        <input type="range" name="sum" min="0.1" max="10" value="0.1" step="0.1" oninput="updateVal()" class="slider" id="sum" />
         <h2 class="values" id="sumVal">5млн</h2>
         <h2 class="labels">Процентная ставка:</h2>
-        <input type="range" name="pr" min="1" max="100" value="50" oninput="updateVal()" class="slider" id="pr" />
+        <input type="range" name="pr" min="1" max="100" value="20" oninput="updateVal()" class="slider" id="pr" />
         <h2 class="values" id="prVal">50%</h2>
         <h2 class="labels">Срок кредита(в мес.):</h2>
-        <input type="range" name="term" min="1" max="360" value="180" oninput="updateVal()" class="slider" id="term" />
+        <input type="range" name="term" min="1" max="360" value="12" oninput="updateVal()" class="slider" id="term" />
         <h2 class="values" id="termVal">180мес</h2>
         <input type="submit" class="anBut" id="anBut" value="Аннуитентный" />
         <input type="submit" class="difBut" id="difBut" value="Дифференцируемый" />
@@ -27,30 +27,17 @@
     {% macro table_params(d, value='') -%}
     <h2>{{ value }}</h2>
     <table>
-        <thead>
-            <tr>
-                <th>Номер месяца</th>
-            </tr>
-            <tr>
-                <th>Платеж</th>
-            </tr>
-            <tr>
-                <th>Остаток кредита</th>
-            </tr>
-            <tr>
-                <th>Остаток по процентам</th>
-            </tr>
-        </thead>
         <tbody>
         {% for k, v in d.items() %}
             <tr>
+                <td>{{ k }}</td>
                 <td>{{ v }}</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
     {%- endmacro %}
-    {{ table_params(params_post, 'Параметры POST') }}
+    {{ table_params(params_post, 'Результат') }}
 
 </body>
 </html>
