--- a/static/style.css
+++ b/static/style.css
@@ -23,7 +23,20 @@ h1{
    color: #4911e2;
 }
 
-.anBut {
+.type1{
+    margin-left: 550px;
+}
+
+.type2{
+    margin-left: 100px;
+}
+
+.typeTxt{
+    color: #660377;
+    font-size: 20px;
+}
+
+.but {
   background-color: #660377; /* Green */
     border: none;
     color: white;
@@ -32,26 +45,11 @@ h1{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin-left: 500px;
+    margin-left: 680px;
+    margin-top: 50px;
 }
 
-.difBut {
-  background-color: #660377; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-left: 200px;
-}
-
-.anBut:hover {
-  background-color: #bd17da;
-}
-
-.difBut:hover {
+.but:hover {
   background-color: #bd17da;
 }
 
@@ -90,4 +88,44 @@ h2{
     border-radius: 50%;
     background: #d146e8;
     cursor: pointer;
+}
+
+.table {
+	width: 100%;
+	border: none;
+	margin-bottom: 20px;
+}
+.table thead th {
+	font-weight: bold;
+	text-align: left;
+	border: none;
+	padding: 10px 15px;
+	background: #d8d8d8;
+	font-size: 14px;
+}
+.table thead tr th:first-child {
+	border-radius: 8px 0 0 8px;
+}
+.table thead tr th:last-child {
+	border-radius: 0 8px 8px 0;
+}
+.table tbody td {
+	text-align: left;
+	border: none;
+	padding: 10px 15px;
+	font-size: 14px;
+	vertical-align: top;
+}
+.table tbody tr:nth-child(even){
+	background: #f3f3f3;
+}
+.table tbody tr td:first-child {
+	border-radius: 8px 0 0 8px;
+}
+.table tbody tr td:last-child {
+	border-radius: 0 8px 8px 0;
+}
+
+td{
+    margin-left: 300px;
 }
