--- a/templates/index.html
+++ b/templates/index.html
@@ -13,27 +13,40 @@
     <form method="post">
         <h2 class="labels">Сумма:</h2>
         <input type="range" name="sum" min="0.1" max="10" value="0.1" step="0.1" oninput="updateVal()" class="slider" id="sum" />
-        <h2 class="values" id="sumVal">5млн</h2>
+        <h2 class="values" id="sumVal">0.1млн</h2>
         <h2 class="labels">Процентная ставка:</h2>
         <input type="range" name="pr" min="1" max="100" value="20" oninput="updateVal()" class="slider" id="pr" />
-        <h2 class="values" id="prVal">50%</h2>
+        <h2 class="values" id="prVal">20%</h2>
         <h2 class="labels">Срок кредита(в мес.):</h2>
-        <input type="range" name="term" min="1" max="360" value="12" oninput="updateVal()" class="slider" id="term" />
-        <h2 class="values" id="termVal">180мес</h2>
-        <input type="submit" class="anBut" id="anBut" value="Аннуитентный" />
-        <input type="submit" class="difBut" id="difBut" value="Дифференцируемый" />
+        <input type="range" name="term" min="1" max="60" value="30" oninput="updateVal()" class="slider" id="term" />
+        <h2 class="values" id="termVal">30мес</h2>
+
+        <input class="type1" type="radio" id="choice1" name="type" value="an" checked="true" />
+        <label class="typeTxt" for="choice1">Аннуитентный</label>
+        <input class="type2" type="radio" id="choice2" name="type" value="dif" />
+        <label class="typeTxt" for="choice2">Дифференцированный</label>
+
+        <input type="submit" class="but" id="but" value="Посчитать" />
     </form>
 
     {% macro table_params(d, value='') -%}
     <h2>{{ value }}</h2>
-    <table>
-        <tbody>
-        {% for k, v in d.items() %}
+    <table class="table">
+        <thead>
             <tr>
-                <td>{{ k }}</td>
-                <td>{{ v }}</td>
+                <td>{{ "№ месяца" }}</td>
+                <td>{{ "Платеж, руб" }}</td>
+                <td>{{ "Остаток кредита, руб" }}</td>
             </tr>
-        {% endfor %}
+	    </thead>
+        <tbody>
+            {% for i in range(d["№месяца"][-1]) %}
+                <tr>
+                    <td>{{ d["№месяца"][i] }}</td>
+                    <td>{{ d["Платеж"][i] }}</td>
+                    <td>{{ d["Остаток кредита"][i] }}</td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
     {%- endmacro %}
